# auto-cv

./: .gitignore  .pre-commit-config.yaml  Pipfile  pyproject.toml
auto_cv/: main.py
auto_cv/templates/: style.css  template.html
