[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["auto_cv"]
exclude = ["tests"]

[tool.setuptools]
include-package-data = true

[project]
name = "auto_cv"
version = "0.0.1"
description = "Package to automatically create a custom CV"
readme = "README.md"
authors = [
    { name = "Liam Humphreys", email = "liamjameshumphreys@gmail.com"}
    ]
dependencies = [
    "jinja2==3.1.2"
    ]

[project.optional-dependencies]
test = ["pytest", "coverage[toml]", "pytest-cov"]
notebook = ["jupyter"]
dev = [ "black", "ruff", "mypy"]

[project.scripts]
print_env_vars = "auto_cv.main:create_template"